--- a/text/images/LETspektrumFluence.tex
+++ b/text/images/LETspektrumFluence.tex
@@ -82,49 +82,33 @@
 \begin{picture}(7936.00,5102.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(814,704){\makebox(0,0)[r]{\strut{}0.1}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{}$1$}}%
       \csname LTb\endcsname%
-      \put(814,1117){\makebox(0,0)[r]{\strut{}0.2}}%
+      \put(946,2082){\makebox(0,0)[r]{\strut{}$10$}}%
       \csname LTb\endcsname%
-      \put(814,1531){\makebox(0,0)[r]{\strut{}0.3}}%
+      \put(946,3459){\makebox(0,0)[r]{\strut{}$100$}}%
       \csname LTb\endcsname%
-      \put(814,1944){\makebox(0,0)[r]{\strut{}0.4}}%
+      \put(946,4837){\makebox(0,0)[r]{\strut{}$1000$}}%
       \csname LTb\endcsname%
-      \put(814,2357){\makebox(0,0)[r]{\strut{}0.5}}%
+      \put(1078,484){\makebox(0,0){\strut{}$10$}}%
       \csname LTb\endcsname%
-      \put(814,2771){\makebox(0,0)[r]{\strut{}0.6}}%
-      \csname LTb\endcsname%
-      \put(814,3184){\makebox(0,0)[r]{\strut{}0.7}}%
-      \csname LTb\endcsname%
-      \put(814,3597){\makebox(0,0)[r]{\strut{}0.8}}%
-      \csname LTb\endcsname%
-      \put(814,4010){\makebox(0,0)[r]{\strut{}0.9}}%
-      \csname LTb\endcsname%
-      \put(814,4424){\makebox(0,0)[r]{\strut{}1.0}}%
-      \csname LTb\endcsname%
-      \put(814,4837){\makebox(0,0)[r]{\strut{}1.1}}%
-      \csname LTb\endcsname%
-      \put(946,484){\makebox(0,0){\strut{}$0.1$}}%
-      \csname LTb\endcsname%
-      \put(2594,484){\makebox(0,0){\strut{}$1$}}%
-      \csname LTb\endcsname%
-      \put(4243,484){\makebox(0,0){\strut{}$10$}}%
-      \csname LTb\endcsname%
-      \put(5891,484){\makebox(0,0){\strut{}$100$}}%
+      \put(4309,484){\makebox(0,0){\strut{}$100$}}%
       \csname LTb\endcsname%
       \put(7539,484){\makebox(0,0){\strut{}$1000$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(176,2770){\rotatebox{-270}{\makebox(0,0){\strut{}$\mathit{RR}$ [-]}}}%
-      \put(4242,154){\makebox(0,0){\strut{}$\mathit{LET}$ [keV/$\mu$m]}}%
+      \put(176,2770){\rotatebox{-270}{\makebox(0,0){\strut{}Fluence [$\mu$m$^{-2}$sr$^{-1}$]}}}%
+      \put(4308,154){\makebox(0,0){\strut{}$\mathit{LET}$ [keV/$\mu$m]}}%
       \csname LTb\endcsname%
-      \put(6552,4538){\makebox(0,0)[r]{\strut{}Al$_2$O$_3$:C}}%
+      \put(6624,4616){\makebox(0,0)[r]{\strut{}PDP1}}%
       \csname LTb\endcsname%
-      \put(6552,4066){\makebox(0,0)[r]{\strut{}CaSO$_4$:Dy}}%
+      \put(6624,4301){\makebox(0,0)[r]{\strut{}PDP2}}%
+      \csname LTb\endcsname%
+      \put(6624,3986){\makebox(0,0)[r]{\strut{}PDP3}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{TLD_RR}}%
+    \put(0,0){\includegraphics{LETspektrumFluence}}%
     \gplfronttext
   \end{picture}%
 \endgroup
