--- a/text/parts/praktickaCast.tex
+++ b/text/parts/praktickaCast.tex
@@ -1,27 +1,87 @@
-\chapter{Vyhodnocení tří detektorů stop v pevné fázi}
+\chapter{Vyhodnocení detektorů stop v pevné fázi (praktická část)}
+\section{Metodika}\label{sec:praktickaCast_metodika}
+NPI používá HARZLAS TD-1 a od roku 2016 i TASTRAK. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je kolem 15,3 $\mu$m. Většinou je analyzována plocha o velikosti 0,09 cm$^2$. Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
+detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 7,5/20,1 $\mu$m; zpravidla se analyzuje plocha o velikosti 0,5 cm$^2$ (v obou případech) z důvodu zajištění dostatečné statistiky. Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000,~\cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
+
+Zatímco HARZLAS TD-1 detekuje částice s $\LET$ vyšším než 7 keV/$\mu$m, TASTRAK má detekční práh 20 keV/$\mu$m. Na druhou stranu TASTRAK má vyšší rozsah měřitelných $\LET$ a díky leptání per partes detekuje s mnohem větší účinností částice s vyšším $\LET$ než HARZLAS TD-1~\cite{cesky}.
+\newpage
+%V tab. \ref{tab:praktickaCast_rozsahyLET} jsou rozsahy měřitelných $\LET$, tj. částice s $\LET$ v tomto intervalu můžeme zahrnout do výpočtů dávky, $\LET$ spektra atd.
+%\begin{table}[H]
+  %\centering
+  %\caption{Rozsah měřitelných $\LET$ daného detektoru.~\cite{thesisKPBrabcova, cesky}}
+  %\label{tab:praktickaCast_rozsahyLET}
+  %\begin{tabular}{lll}
+	%\toprule
+	%Materiál & Rozsah $\LET$ [keV/$\mu$m]\\
+	%\midrule
+	%HARZLAS TD-1& 7 -- 340\\
+	%TASTRAK& 20 -- 450\\
+	%\bottomrule
+  %\end{tabular}
+%\end{table}
+\section{Vyhodnocení}
 \begin{wrapfigure}{r}{0.42\textwidth}
 %\begin{figure}[h]
   \centering
   %\vspace{-20pt}
   \includegraphics[width=0.4\textwidth]{praktickaCast_mikroskop}
   %\vspace{-20pt}
-  \caption{Vysoko rychlostní optický mikroskop HSP-1000. \cite{dosis_HSP1000}}
+  \caption{Vysoko rychlostní optický mikroskop HSP-1000.~\cite{dosis_HSP1000}}
   \label{fig:praktickaCast_mikroskop}
   \vspace{-10pt}
 %\end{figure}
 \end{wrapfigure}
-V praktické části bakalářské práce byly vyhodnoceny tři detektory stop osmé sady experimentu DOSIS3D, které byly součástí prvního, druhého a třetího PDP. Jedná se o detektory z materiálu Tastrak, které byly leptány 6 hodin, tj. zobrazené stopy jsou původem od částic s krátkým dosahem a vyšším LET. Povrch detektorů byl již nasnímám, vyhodnocení detektorů tedy započalo analýzou stop v programu HspFit. Tento program sám vyhodnotí a zaznamená při dobrém nastavení určitých parametrů většinu stop, zbytek se musí označit ručně, což je zdlouhavá práce. Stopy se zaznamenávají tak, že se jejich okraj fituje elipsou, přičemž parametry fitu představují osy elipsy (hlavní $a$ a vedlejší $b$). V případě špatného automatického fitu lze proklad opravit ručně. Na obr.~\ref{fig:praktickaCast_hspfit} vidíme okno programu HspFit, zeleně jsou označeny stopy zaznamenané počítačem, červeně stopy zaznamenané uživatelem a fialově opravené fity. Dále lze
-pozorovat, že některé stopy ještě na zaznamenání čekají. 
+V praktické části bakalářské práce byly vyhodnoceny tři detektory stop osmé sady experimentu DOSIS3D. Detektory byly umístěny v prvním, druhém a třetím PDP. Jedná se o detektory z materiálu Tastrak, které byly leptány 6 hodin, tj. zobrazené stopy jsou původem od částic s krátkým dosahem a vyšším LET.
 
-Na obr.~\ref{fig:praktickaCast_mikroskop} je mikroskopický systém HSP-1000 (neúplný, chybí počítač, který systém řídí) pomocí něhož byl povrch detektorů nasnímkován v dostatečném přiblížení.
+Na obr.~\ref{fig:praktickaCast_mikroskop} je mikroskopický systém HSP-1000 (neúplný, chybí počítač, který systém řídí) pomocí něhož byl povrch detektorů nasnímán v dostatečném přiblížení.
+
+Vyhodnocovat jsem započal analýzou stop v programu HspFit. Tento program sám vyhodnotí a zaznamená při dobrém nastavení určitých parametrů většinu stop, zbytek se musí označit ručně, což je zdlouhavá práce. Stopy se zaznamenávají tak, že se jejich okraj fituje elipsou, přičemž parametry fitu představují osy elipsy (hlavní $a$ a vedlejší $b$). V případě špatného automatického fitu lze proklad opravit ručně. Na obr.~\ref{fig:praktickaCast_hspfit} vidíme okno programu HspFit, zeleně jsou označeny stopy zaznamenané počítačem, fialově stopy zaznamenané uživatelem. Dále lze pozorovat, že některé stopy ještě zaznamenány nebyly. 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.85\textwidth]{praktickaCast_hspfit}
-  \caption{Okno programu HspFit; zeleně jsou označeny fity vygenerované počítačem, fialově opravené fity uživatelem a červeně fity vytvořené uživatelem. \cite{dosis_HSP1000}}
+  \caption{Okno programu HspFit; zeleně jsou označeny fity vygenerované počítačem a fialově fity vytvořené uživatelem.~\cite{dosis_HSP1000}}
   \label{fig:praktickaCast_hspfit}
 \end{figure}
 
-V obr. \ref{fig:praktickaCast_stopy} jsou uvedeny jednotlivé snímky z povrchu náhodně vybraného detektoru. V (a) je snímek, který obsahuje v čisté stopy; v (b) ukazuje červená šipka poškození materiálu, které by mohl neznalý uživatel vyhodnotit jako vícero stop; v (c) taktéž ukazuje červená šipka poškození materiálu, ale jiného charakteru. Obr.~\ref{fig:praktickaCast_stopyPoskozeni} pak ukazuje snímky, na nichž je naskenována plocha, která byla fyzicky znehodnocena člověkem (označení detektoru vyrytím X). 
+V obr. \ref{fig:praktickaCast_stopy} jsou uvedeny jednotlivé snímky z povrchu náhodně vybraného detektoru. V (a) je snímek, který obsahuje čisté stopy; v (b) ukazuje červená šipka poškození materiálu nepocházející od ozáření ionizujícím zářením, které by mohl neznalý uživatel vyhodnotit jako vícero stop; v (c) taktéž ukazuje červená šipka poškození materiálu jiného charakteru. Obr.~\ref{fig:praktickaCast_stopyPoskozeni} pak ukazuje snímky, na nichž je naskenována plocha, která byla fyzicky znehodnocena člověkem (označení detektoru vyrytím X). 
+
+Osy všech elips byly spolu s dalšími parametry fitů (např. sklon elipsy) uloženy v souboru s příponou .nap. Tato data byla zpracována skriptem napsaném v programovacím jazyce Python, jehož výstupem jsou tři soubory. První soubor obsahuje údaje o poloze stopy, os fitované elipsy, poměru leptacích rychlostí $V$, korekčním součiniteli $k_{\theta}$, lineárním přenosu energie $\LET$, dávce a dávkovém ekvivalentu každé stopy. Druhý soubor obsahuje celkovou dávku a dávkový ekvivalent, které se absorbovaly v detektoru i s jejich příkony. Třetí soubor obsahuje data potřebná k vytvoření diferenciálních $\LET$ spekter; z těchto dat jsem pomocí programu Gnuplot vytvořil grafy \ref{fig:praktickaCast_LETcetnost}, \ref{fig:praktickaCast_LETfluence}, \ref{fig:praktickaCast_LETdavka}
+a \ref{fig:praktickaCast_LETdavkEkvivalent}. Skript vypočítává pro každou částici $V$ z hodnot $a,b$ (vztah \eqref{eq:pomerLepRychlosti}, tloušťka odleptané vrstvy je $7,5$
+$\mu$m) a následně $\LET$ dané částice z $V$ pomocí kalibrační křivky pro TASTRAK leptaný 6 hodin \eqref{eq:kalibracniKrivkaSestHod}.
+\begin{align}
+  \LET(V) &= -99,8424+125,00172  V-15,28166  V^2+2,04636  V^3\,,\label{eq:kalibracniKrivkaSestHod}
+  %\LET(V) &= -96,35071+114,90343  V-7,77194  V^2+1,27248  V^3\quad\text{(15 hod)},\label{eq:kalibracniKrivkaPatnactHod}
+\end{align}
+kde $\LET$ vychází v keV/$\mu$m; závislost byla přebrána z \cite{ssntd}. Kalibrační křivka je také k nahlédnutí na obr. \ref{fig:praktickaCast_kalibracniKrivky}.
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.7\textwidth]{praktickaCast_kalibracniKrivky.jpg}
+  \caption{Kalibrační křivky pro TASTRAK leptaný 6, resp. 15 hodin. Obrázek obsahuje i kalibrační body. Kalibrační křivky pocházejí od MTA EK, \cite{ssntd}.}
+  \label{fig:praktickaCast_kalibracniKrivky}
+\end{figure}
+Z $\LET$ všech částic jsou dále vypočítány dávka a dávkový ekvivalent dle vztahů \eqref{eq:Davka} a \eqref{eq:EkvDavka}. Díky známému času doby měření můžeme určit příkony těchto veličin, tj. $\dot{D}, \dot{H}$.
+
+%Tab. \ref{tab:praktickaCast_davkyVysledky} obsahuje hledané celkové dávky a dávkové ekvivalenty; do vyhodnocení nebyly zahrnuty stopy s $\LET>1000$ (kvůli rozsahu kalibrační křivky). Na obr. \ref{fig:praktickaCast_LETspektra} jsou $\LET$ spektra získaná z vyhodnocených detektorů.
+
+Původní Python skript, který jsem obdržel od vedoucí práce, neposkytoval data pro $\LET$ spektra a nevypočítával $\dot{D},\dot{H}$. Pro tyto účely jsem ho musel dopsat. 
+%osmá sada
+\begin{table}[h]
+  \centering
+  \caption{Celkové dávky $D$ a dávkové ekvivalenty $H$ určené vyhodnocovanými detektory.}
+  \label{tab:praktickaCast_davkyVysledky}
+  \begin{tabular}{lll}
+	\toprule
+	PDP&$D$ [mGy]&$H$ [mSv]\\
+	\midrule
+	%1&5,31501450067&88,2754298605\\
+	%2&5,068573344&92,5692674847\\
+	%3&4,31129592097&75,4191405129\\
+	1&$5\pm1$&$90\pm20$\\
+	2&$5\pm1$&$90\pm20$\\
+	3&$4\pm1$&$90\pm20$\\
+	\bottomrule
+  \end{tabular}
+\end{table}
 \begin{figure}[h]
   \centering
   \begin{subfigure}{0.7\textwidth}
@@ -52,59 +112,32 @@ V obr. \ref{fig:praktickaCast_stopy} jsou uvedeny jednotlivé snímky z povrchu 
   \caption{Naskenované snímky zobrazující poškozené části plochy detektoru vyrytím značky X.}
   \label{fig:praktickaCast_stopyPoskozeni}
 \end{figure}
-
-Osy všech elips byly spolu s dalšími parametry fitů (např. sklon elipsy) uloženy v souboru s příponou .nap. Tyto data byla zpracována skriptem napsaném v programovacím jazyce Python, jehož výstupem jsou dva soubory a jeden graf. První soubor obsahuje údaje o poloze stopy, os fitované elipsy, poměru leptacích rychlostí $V$, korekčním součiniteli $k_{\theta}$, lineárním přenosu energie $\LET$, dávce $D_i$ a dávkovém ekvivalentu $H_i$ každé stopy. Druhý soubor obsahuje celkovou dávku a dávkový ekvivalent, které se absorbovaly v detektoru; dále obsahuje data potřebná k vytvoření diferenciálního $\LET$ spektra; z těchto dat je vytvořen výstupní graf. Skript vypočítává pro každou částici $V$ z hodnot $a,b$ (vztah \eqref{eq:pomerLepRychlosti}, tloušťka odleptané vrstvy je $7,5$
-$\mu$m) a následně $\LET$ dané částice z $V$ pomocí kalibrační křivky pro TASTRAK leptaný 6 hodin. Tato i druhá kalibrační křivka pro TASTRAK leptaný 15 hodin jsou tvaru
-\begin{align}
-  \LET(V) &= -99,8424+125,00172  V-15,28166  V^2+2,04636  V^3\quad\text{(6 hod)},\label{eq:kalibracniKrivkaSestHod}\\
-  \LET(V) &= -96,35071+114,90343  V-7,77194  V^2+1,27248  V^3\quad\text{(15 hod)},\label{eq:kalibracniKrivkaPatnactHod}
-\end{align}
-kde $\LET$ vychází v keV/$\mu$m; závislosti byly přebrány z \cite{ssntd}. Z $\LET$ částice je dále vypočítána dávka předaná danou částicí $D_i$ ze zjednodušeného vztahu \eqref{eq:Davka} 
-\begin{equation}
-  D_i=\text{konst}\cdot\LET\cdot k_{\theta}\cdot\frac{2}{ProcArea}\,, 
-  \label{eq:praktickaCast_davkaJednaCastice}
-\end{equation}
-kde $\text{konst}=1,602\cdot 10^{-6}$, $ProcArea$ <++?++>. Dávkový ekvivalent od dané částice $H_i$ je určen ze vztahu 
-\begin{equation}
-  H_i=D_i\cdot Q\,.
-  \label{eq:praktickaCast_ekvDavkaJednaCastice}
-\end{equation}
-$Q$ je jakostní faktor určený podle ICRP 60 (tab. \ref{tab:detektory_Q}). Celková dávka $D$ a dávkový ekvivalent $H$ jsou $D_i$ a $H_i$ všech částic. 
-
-V tab. \ref{tab:praktickaCast_davkyVysledky} jsou celkové dávky a dávkové ekvivalenty určené třemi vyhodnocenými detektory Na obr. \ref{fig:praktickaCast_LETspektra} jsou $\LET$ spektra získaná z vyhodnocených detektorů.
-%osmá sada
-\begin{table}[h]
-  \centering
-  \caption{Celkové dávky $D$ a dávkové ekvivalenty $H$ určené vyhodnocovanými detektory.}
-  \label{tab:praktickaCast_davkyVysledky}
-  \begin{tabular}{lll}
-	\toprule
-	PDP&$D$ [mGy]&$H$ [mSv]\\
-	\midrule
-	%1&5,31501450067&88,2754298605\\
-	%2&5,068573344&92,5692674847\\
-	%3&4,31129592097&75,4191405129\\
-	1&5,3150&88,2754\\
-	2&5,0686&92,5693\\
-	3&4,3113&75,4191\\
-	\bottomrule
-  \end{tabular}
-\end{table}
 \begin{figure}[h]
   \centering
-  \begin{subfigure}{0.49\textwidth}
-	\includegraphics[width=\textwidth]{praktickaCast_spektrum1.eps}
+	\centering
+	\input{images/LETspektrumCetnost}
 	\caption{}
-  \end{subfigure}
-  \begin{subfigure}{0.49\textwidth}
-	\includegraphics[width=\textwidth]{praktickaCast_spektrum2.eps}
+	\label{fig:praktickaCast_LETcetnost}
+\end{figure}
+\begin{figure}[h]
+  \centering
+	\centering
+	\input{images/LETspektrumFluence}
 	\caption{}
-  \end{subfigure}
-  \begin{subfigure}{0.49\textwidth}
-	\includegraphics[width=\textwidth]{praktickaCast_spektrum3.eps}
+	\label{fig:praktickaCast_LETfluence}
+\end{figure}
+\begin{figure}[h]
+  \centering
+	\centering
+	\input{images/LETspektrumDavka}
 	\caption{}
-  \end{subfigure}
-  \caption{Diferenciální $\LET$ spektra vyhodnocených detektorů. Na svislé ose je počet impulzů spadnuvších do příslušného kanálu.}
-  \label{fig:praktickaCast_LETspektra}
+	\label{fig:praktickaCast_LETdavka}
+\end{figure}
+\begin{figure}[h]
+  \centering
+	\centering
+	\input{images/LETspektrumDavkEkvivalent}
+	\caption{}
+	\label{fig:praktickaCast_LETdavkEkvivalent}
 \end{figure}
 
